<resources>
    <string name="app_name">CSE476Project</string>
    <string name="client_id">405899521195-t2m5dj935qkmbmhojcishue4rji18crg.apps.googleusercontent.com</string>
    <string name="sign_out">Sign Out</string>
    <string name="Hair">HAIR</string>
    <string name="welcome">Welcome to</string>
    <string name="spartanconnect">SPARTAN CONNECT</string>
    <string name="Nails">NAILS</string>
    <string name="Tutoring">TUTORING</string>
    <string name="profile">Profile</string>
    <string name="Hair_name">Name:</string>
    <string name="Hair_service_offered">Service Offered:</string>
    <string name="Hair_address">Address:</string>
    <string name="Hair_price_per_hour">Price per Hour:</string>
    <string name="route">SEE THE ROUTE</string>
    <string name="tutoring">TUTORING</string>
    <string name="back">Back</string>
    <string name="sign_out_text">Sign Out</string>
    <string name="hello">Hello!</string>
    <string name="slogan">Your one stop solution for Spartan Student Services!</string>
    <string name="dummy">dummy</string>
    <string name="name">Name:</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="other_comments">Other Comments:</string>
    <string name="request_service">Request Service</string>
    <string name="cancel">Cancel</string>
    <string name="book">Book</string>
    <string name="back_to_main_page">Back to Main Page</string>
    <string name="view_pending_requests">View Pending Requests</string>
</resources>