<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InitialPage">

    <TextView
        android:id="@+id/welcometo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"
        android:text="@string/welcome"
        android:textSize="30dp"/>
    <TextView
        android:id="@+id/spartanconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcometo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/spartanconnect"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="40sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/hairbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spartanconnect"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/Hair" />
    <Button
        android:id="@+id/nailsbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/hairbutton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/Nails" />
    <Button
        android:id="@+id/tutoringbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nailsbutton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/Tutoring" />


</RelativeLayout>