<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/msu"
        android:scaleType="centerCrop" />

    <ImageView
        android:layout_width="150sp"
        android:layout_height="150sp"
        android:src="@drawable/transparent"
        android:scaleType="fitXY"
        android:layout_marginTop="60sp"
        android:layout_centerHorizontal="true"
        android:id = "@+id/SignOutLogo"
        android:layout_below="@+id/backButton"
        />

    <TextView
        android:id="@+id/hiMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:textSize="40sp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/requestTable"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/hiMessage"
        android:text="@string/view_pending_requests"/>


    <Button
        android:id="@+id/SignOutButton"
        android:layout_below="@+id/requestTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_out_text"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_main_page"
        android:textColor="@android:color/white"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"/>

</RelativeLayout>