<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Nail">

    <Button
        android:id="@+id/NailBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:onClick="onBackClick"/>

    <TextView
        android:id="@+id/nail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/Nails"
        android:textColor="#18453B"
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_below="@id/NailBack"/>

    <TextView
        android:id="@+id/NailNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nail"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/Hair_name"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/NailNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/NailNameLabel"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/NailServiceOfferedLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/NailNameTextView"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/Hair_service_offered"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/NailServiceOfferedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/NailServiceOfferedLabel"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/NailAddressLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/NailServiceOfferedTextView"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/Hair_address"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/NailAddressTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/NailAddressLabel"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/NailPricePerHourLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/NailAddressTextView"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/Hair_price_per_hour"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/NailPricePerHourTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/NailPricePerHourLabel"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/NailMap"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_below="@id/NailPricePerHourTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/route"
        android:backgroundTint="@android:color/black"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="25dp"
        android:onClick="startGoogleMaps"/>

</RelativeLayout>