<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Hair">

    <TextView
        android:id="@+id/hair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/Hair"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="50sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/hair"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/Hair_name"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameLabel"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/serviceOfferedLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameTextView"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/Hair_service_offered"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/serviceOfferedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/serviceOfferedLabel"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/addressLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/serviceOfferedTextView"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/Hair_address"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/addressTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/addressLabel"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/pricePerHourLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/addressTextView"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/Hair_price_per_hour"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/pricePerHourTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pricePerHourLabel"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"/>
    <Button
        android:id="@+id/Route"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_below="@id/pricePerHourTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/route"
        android:backgroundTint="@android:color/black"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="25dp"/>

</RelativeLayout>