<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tutoring">

    <TextView
        android:id="@+id/tutoring"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/tutoring"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="50sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/TutoringNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tutoring"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/Hair_name"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/TutoringNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/TutoringNameLabel"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/TutoringServiceOfferedLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/TutoringNameTextView"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/Hair_service_offered"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/TutoringServiceOfferedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/TutoringServiceOfferedLabel"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/TutoringAddressLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/TutoringServiceOfferedTextView"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/Hair_address"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/TutoringAddressTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/TutoringAddressLabel"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/TutoringPricePerHourLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/TutoringAddressTextView"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/Hair_price_per_hour"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/TutoringPricePerHourTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/TutoringPricePerHourLabel"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/Route"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_below="@id/TutoringPricePerHourTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/route"
        android:backgroundTint="@android:color/black"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="25dp"/>

</RelativeLayout>